--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '1', '1', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '1', '1', '1', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '1', '1', '1', '1', '1', '0', '0', '0']\n",
-      "['0', '0', '0', '1', '1', '1', '1', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '1', '1', '1', '0', '0', '0']\n",
-      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
       "\n",
       "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
       "[[0, 1, 0, False], [0, 1, 1, False], [0, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
@@ -34,6 +34,9 @@
     }
    ],
    "source": [
+    "input = open(\"data/boj_17136.txt\", \"r\").readline\n",
+    "\n",
+    "\n",
     "arr = [input().split() for _ in range(10)]\n",
     "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
     "\n",
@@ -47,18 +50,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [input().split() for _ in range(10)]\n",
+    "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "\n",
+    "for row in arr:\n",
+    "    print(row)\n",
+    "print()\n",
+    "\n",
+    "for row in dp:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "dp_new = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(arr[0])):\n",
     "    if arr[0][i] == \"1\":\n",
-    "        dp[0][i][0] = 1"
+    "        dp[0][i][0] = 1\n",
+    "        \n",
+    "for i in range(len(arr[0])):\n",
+    "    if arr[0][i] == \"1\":\n",
+    "        dp_new[0][i][0] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,28 +108,35 @@
     "        dp[i][0][0] = 1\n",
     "    for j in range(1, len(arr[0])):\n",
     "        if arr[i][j] == \"1\":\n",
-    "            dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1"
+    "            dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
+    "            \n",
+    "for i in range(1, 10):\n",
+    "    if arr[i][0] == \"1\":\n",
+    "        dp_new[i][0][0] = 1\n",
+    "    for j in range(1, len(arr[0])):\n",
+    "        if arr[i][j] == \"1\":\n",
+    "            dp_new[i][j][0] = min(dp_new[i][j-1][0], dp_new[i-1][j][0], dp_new[i-1][j-1][0]) + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '1', '1', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '1', '1', '1', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '1', '1', '1', '1', '1', '0', '0', '0']\n",
-      "['0', '0', '0', '1', '1', '1', '1', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '1', '1', '1', '0', '0', '0']\n",
-      "['0', '0', '1', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n",
-      "['0', '0', '0', '0', '0', '0', '0', '0', '0', '0']\n"
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n",
+      "['1', '1', '1', '1', '1', '1', '1', '1', '1', '1']\n"
      ]
     }
    ],
@@ -99,7 +147,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1 1 1 1 1 1 1 1 \n",
+      "1 2 2 2 2 2 2 2 2 2 \n",
+      "1 2 3 3 3 3 3 3 3 3 \n",
+      "1 2 3 4 4 4 4 4 4 4 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 6 6 6 6 6 \n",
+      "1 2 3 4 5 6 7 7 7 7 \n",
+      "1 2 3 4 5 6 7 8 8 8 \n",
+      "1 2 3 4 5 6 7 8 9 9 \n",
+      "1 2 3 4 5 6 7 8 9 10 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp[0])):\n",
+    "        print(dp[i][j][0], end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, False], [0, 0, 1, False], [0, 0, 2, False], [0, 0, 3, False], [0, 0, 4, False], [0, 0, 5, False], [0, 0, 6, False], [0, 0, 7, False], [0, 0, 8, False], [0, 0, 9, False]]\n",
+      "[[0, 1, 0, False], [1, 1, 1, False], [1, 1, 2, False], [0, 1, 3, False], [0, 1, 4, False], [0, 1, 5, False], [0, 1, 6, False], [0, 1, 7, False], [0, 1, 8, False], [0, 1, 9, False]]\n",
+      "[[0, 2, 0, False], [1, 2, 1, False], [2, 2, 2, False], [1, 2, 3, False], [0, 2, 4, False], [0, 2, 5, False], [0, 2, 6, False], [0, 2, 7, False], [0, 2, 8, False], [0, 2, 9, False]]\n",
+      "[[0, 3, 0, False], [0, 3, 1, False], [1, 3, 2, False], [2, 3, 3, False], [1, 3, 4, False], [1, 3, 5, False], [1, 3, 6, False], [0, 3, 7, False], [0, 3, 8, False], [0, 3, 9, False]]\n",
+      "[[0, 4, 0, False], [0, 4, 1, False], [0, 4, 2, False], [1, 4, 3, False], [2, 4, 4, False], [2, 4, 5, False], [2, 4, 6, False], [0, 4, 7, False], [0, 4, 8, False], [0, 4, 9, False]]\n",
+      "[[0, 5, 0, False], [0, 5, 1, False], [0, 5, 2, False], [0, 5, 3, False], [1, 5, 4, False], [2, 5, 5, False], [3, 5, 6, False], [0, 5, 7, False], [0, 5, 8, False], [0, 5, 9, False]]\n",
+      "[[0, 6, 0, False], [0, 6, 1, False], [1, 6, 2, False], [0, 6, 3, False], [0, 6, 4, False], [0, 6, 5, False], [0, 6, 6, False], [0, 6, 7, False], [0, 6, 8, False], [0, 6, 9, False]]\n",
+      "[[0, 7, 0, False], [0, 7, 1, False], [0, 7, 2, False], [0, 7, 3, False], [0, 7, 4, False], [0, 7, 5, False], [0, 7, 6, False], [0, 7, 7, False], [0, 7, 8, False], [0, 7, 9, False]]\n",
+      "[[0, 8, 0, False], [0, 8, 1, False], [0, 8, 2, False], [0, 8, 3, False], [0, 8, 4, False], [0, 8, 5, False], [0, 8, 6, False], [0, 8, 7, False], [0, 8, 8, False], [0, 8, 9, False]]\n",
+      "[[0, 9, 0, False], [0, 9, 1, False], [0, 9, 2, False], [0, 9, 3, False], [0, 9, 4, False], [0, 9, 5, False], [0, 9, 6, False], [0, 9, 7, False], [0, 9, 8, False], [0, 9, 9, False]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in dp_new:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -121,9 +225,134 @@
    ],
    "source": [
     "for i in range(10):\n",
-    "    for j in range(len(dp[0])):\n",
-    "        print(dp[i][j][0], end=\" \")\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][0], end=\" \")\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][3], end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i-k : 3,  j-l : 4,  False\n",
+      "i-k : 3,  j-l : 5,  False\n",
+      "i-k : 3,  j-l : 6,  False\n",
+      "\n",
+      "i-k : 4,  j-l : 4,  False\n",
+      "i-k : 4,  j-l : 5,  False\n",
+      "i-k : 4,  j-l : 6,  False\n",
+      "\n",
+      "i-k : 5,  j-l : 4,  False\n",
+      "i-k : 5,  j-l : 5,  False\n",
+      "i-k : 5,  j-l : 6,  False\n",
+      "\n",
+      "sum : 9, i : 5,  j :6\n",
+      "i-k : 1,  j-l : 1,  False\n",
+      "i-k : 1,  j-l : 2,  False\n",
+      "\n",
+      "i-k : 2,  j-l : 1,  False\n",
+      "i-k : 2,  j-l : 2,  False\n",
+      "\n",
+      "sum : 4, i : 2,  j :2\n",
+      "\n",
+      "i-k : 3,  j-l : 2,  False\n",
+      "i-k : 3,  j-l : 3,  False\n",
+      "\n",
+      "i-k : 2,  j-l : 3,  False\n",
+      "\n",
+      "sum : 1, i : 2,  j :3\n",
+      "i-k : 3,  j-l : 2,  False\n",
+      "\n",
+      "sum : 1, i : 3,  j :2\n",
+      "i-k : 4,  j-l : 3,  False\n",
+      "\n",
+      "sum : 1, i : 4,  j :3\n",
+      "i-k : 6,  j-l : 2,  False\n",
+      "\n",
+      "sum : 1, i : 6,  j :2\n"
+     ]
+    }
+   ],
+   "source": [
+    "size = 5\n",
+    "\n",
+    "while size >=1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp_new[0])):\n",
+    "            sum = 0            \n",
+    "            if dp_new[i][j][0] == size:                \n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not dp_new[i-k][j-k][3]:\n",
+    "                            sum += 1 \n",
+    "                            print(f\"i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
+    "                    print()                          \n",
+    "                                    \n",
+    "            if sum == size ** 2:\n",
+    "                print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        dp_new[i-k][j-l][3] = True                            \n",
+    "                        if not(k==0 and l==0) :                      \n",
+    "                            dp_new[i-k][j-l][0] = 0\n",
+    "    size -= 1           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "for i in range(len(dp_new)):\n",
+    "    for j in range(len(dp_new[i])):\n",
+    "        if dp_new[i][j][0] != 0:\n",
+    "            sum += 1\n",
+    "        \n",
+    "print(sum)"
    ]
   },
   {
@@ -132,6 +361,90 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [input().split() for _ in range(10)]\n",
+    "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "\n",
+    "for i in range(len(arr[0])):\n",
+    "    if arr[0][i] == \"1\":\n",
+    "        dp[0][i][0] = 1\n",
+    "\n",
+    "for i in range(1, 10):\n",
+    "    if arr[i][0] == \"1\":\n",
+    "        dp[i][0][0] = 1\n",
+    "    for j in range(1, len(arr[0])):\n",
+    "        if arr[i][j] == \"1\":\n",
+    "            dp[i][j][0] = min(dp[i][j-1][0], dp[i-1][j][0], dp[i-1][j-1][0]) + 1\n",
+    "\n",
+    "size = 5\n",
+    "\n",
+    "while size >=1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp[0])):\n",
+    "            sum = 0            \n",
+    "            if dp[i][j][0] == size:                \n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not dp[i-k][j-k][3]:\n",
+    "                            sum += 1                                             \n",
+    "                                    \n",
+    "            if sum == size ** 2:                              \n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        dp[i-k][j-l][3] = True                            \n",
+    "                        if not(k==0 and l==0) :                      \n",
+    "                            dp[i-k][j-l][0] = 0\n",
+    "    size -= 1\n",
+    "    \n",
+    "sum = 0\n",
+    "for i in range(len(dp)):\n",
+    "    for j in range(len(dp[i])):\n",
+    "        if dp[i][j][0] != 0:\n",
+    "            sum += 1\n",
+    "        \n",
+    "print(sum)      "
+   ]
   }
  ],
  "metadata": {
